# fishtank

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yaml  release.yaml  rust-clippy.yml  rust.yml
asset_srcs/: fishBackground.kra  fishBackground.tmx  fishTilesheet.tsx  fishtank.tiled-session
src/: direction.rs  main.rs  mobile.rs
