[package]
name = "fishtank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
rand = "0.8.5"
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
# bevy-inspector-egui = "0.18.3"
# b-i-e-r isn't yet supported in Bevy 0.10 
# bevy-inspector-egui-rapier = { version = "0.9.0", features = [ "rapier2d" ] }
bevy_asset_loader = { version = "0.16.0", features = ["2d"] }
bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d" ] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Add this to your Cargo.toml
[profile.release]
codegen-units = 1
